--- a/Lecture7/Grids/index.html
+++ b/Lecture7/Grids/index.html
@@ -47,7 +47,7 @@
 
         .item:nth-of-type(2){
             background-color: palevioletred;
-            /* grid-row: span 2; */
+            grid-row: span 2;
             /* grid-column: span 3; */
         }
     }
