--- a/Module2/Lecture6/IntroTOAsync/index.html
+++ b/Module2/Lecture6/IntroTOAsync/index.html
@@ -11,13 +11,13 @@
 
     
        
-    <h1> Learning JS - Lec 4  </h1>
+    <h1> Learning JS - Lec 6  </h1>
 
 
 
 
 
-<script src="filter.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
